fixed cart overflow for continue

--- a/finalproject/css/continue.css
+++ b/finalproject/css/continue.css
@@ -154,6 +154,7 @@ nav img{
 }
 .final{
   text-align: left;
+  margin-bottom: 40%;
 }
 .total h2{
   margin: 5px 0;
